--- a/submission.mkd
+++ b/submission.mkd
@@ -1,124 +1,75 @@
 # Hardware and software for single-molecule fluorescence analysis
 
-Fluorescence spectroscopy techniques have in recent years enabled a
-variety of measurements on biologically relevant systems ranging from
-characterization of polymer mechanics
+Over the last three decades, fluorescence spectroscopy has developed
+into a unique tool for probing biologically relevant systems. In
+particular, fluorescence correlation spectroscopy (FCS) is now a
+routine measurement enabling biologists access to reaction
+kinetics[@Wu2006; @Heyduk2002; @Allen2006]
+and sizes of biomolecular assemblies[@Pitschke1998]. 
+Likewise, single molecule Förster resonance energy transfer (smFRET) has
+proved to be useful for a variety of biologically relevant
+measurements ranging from DNA/RNA mechanics 
 [@iqbal2008orientation; @Vafabakhsh2012; @Laurence2005; @Wozniak2008]
-to enzyme kinetics [@Wu2006; @Heyduk2002; @Allen2006] to protein
-conformation [@Wozniak2005] to *in vivo* measurement of macromolecular
-aggregation [@Pitschke1998].
+to protein conformation [@Wozniak2005] and function[@todo]
+In when used in tandem these two techniques can provide unique perspective
+into dynamics on molecular length-scales [@Nettels2008].
 
-What is wrong with existing tools?
- * hardware is either expensive or collects coarse-grained data
- * hardware is inflexible too support recent experimental variants
- * common software is closed or non-existent hindering reproducibility
-   and raising barrier-to-entry
- * How can I talk about the limitations of existing solutions without
-   discussion what existing solutions do?
+These measurements share a need for a photon timing system and
+associated analysis tools. While commerical time-correlated single
+photon counting (TCSPC) modules are readily available, they are not
+optimal for FRET experiments as they generally cost tens of thousands
+of dollars due to the picosecond timing resolution demanded by TCSPC
+experiments. In contrast, this resolution brings little to a FRET or
+FCS experiment where the shortest timescale is generally of order
+microseconds.
+
+To avoid the need for a TCSPC module, some labs instead use a hardware
+correlator device. While these devices are less expensive and readily
+available, they often lack the ability to timestamp individual photon
+arrivals and suffer from poor time resolution.
+
+Furthermore, both of these instruments lack the flexibility needed for
+alternating laser excitation [@lee2005; @seidel2008] and similar
+techniques which can substantially enhance the information yield of
+the experiment.
+
+TODO need for analysis tools
+
+## Contribution
 
 We present a suite of end-to-end tools for the collection and analysis
 of fluorescence spectroscopy data. Our package includes hardware and
 software for experimental data collection, as well as a diverse set of
-tools for manipulating the resulting dataset. Finally, we include a
-set of tools for robust analysis of a data from a few common
-fluorescence experiments.
-
-## Background: Fluorescence spectroscopy
-
-![A schematic representation of a typical fluorescence spectroscopy experiment. Here we see a laser illuminating a observation volume confocal with a collection volume. Two photon-counting detectors collect fluorescence produced from fluorophores passing through this volume.](fret-setup.pdf)
-
-Fluorescence spectroscopic methods are a class of experimental
-techniques examining photon emissions from fluorescent molecules. Of
-the wide array of fluorescence techniques, we focus on single-molecule
-methods. Since the advent of convenient linker chemistries for
-attaching fluorescent dyes to typical biological polymers
-(e.g. proteins, DNA, and RNA), these techniques have enjoyed
-applicability to a wide variety of biologically relevant systems.
-We will focus on two methods in particular.
-
-### Förster Resonance Energy Transfer
-
-Förster Resonance Energy Transfer (FRET) is a fluorescence technique
-used heavily in biology and biophysics. In recent years, FRET has
-enabled high-resolution studies of macromolecular geometry
-[@Iqbal2005], studies of mechanical flexibility [@Vafabakhsh2012], as
-well enzyme kinetics [@seidel2010], revealing structure and dynamics
-largely inaccessible by other means.
-
-The method revolves around the Förster process whereby two
-fluorophores in close proximity to one another can undergo energy
-transfer. The efficiency of this transfer process is modulated by
-the distance and relative orientation of the dyes, as well as
-a variety of environmental parameters. By examining the relative
-fluorescence intensity of the two dyes, one can observe structural
-changes in the molecule under study. With careful characterization and
-modelling, quantitative FRET measurements are also possible, allowing
-measurement of molecular conformation.
-
-FRET poses a variety of experimental challenges,
-
- * measurement artifacts for detector background and non-ideal optics
-   require characterization and correction
- * photophysical effects such as triplet blinking and non-radiative
-   decay pathways require careful consideration
- * eventual bleaching of fluorophores set an upper bound on experiment length
- * artifacts due to dynamics of the fluorophores themselves require
-   modelling and correction
-
-### Fluorescence Correlation Spectroscopy
-
-Fluorescence Correlation Spectroscopy (FCS) [@haustein2007] is an
-experimental tool widely used to characterize reaction
-kinetics[@allen2006] and molecular size.  By examining temporal
-correlations in fluorescence intensity fluctuations within a
-observation volume, one can infer characteristics of a
-molecular species' diffusion. Depending upon the nature of the system,
-one might find one-, two-, or three-dimension diffusion, normal or
-anomalous, each exhibiting a distinct functional form.
-
-Using FCS in conjunction with FRET can provide deep insights into
-dynamics on molecular length-scales [@Nettels2008].
+tools for manipulating the resulting dataset. Finally, we introduce a
+set of tools for robust analysis of FCS and FRET data.
 
 ## Tools for experimental data collection
 
 ### Hardware
-The heart? of a single-molecule fluorescence experiment is the photon
-timestamping device. This device takes the output signals from each of
-the detector modules and records a timestamp for each photon detection
-event. Despite the relatively simple requirements for this device, we
-found a remarkable gap in the capabilities of the commerically
-available hardware.
 
-While Time-Correlated Single Photon Counting (TCSPC) modules offer
-extremely high resolution timestamps (~10 picosecond), they
-cost tens of thousands of dollars, far more than our comparatively
-relaxed timing requirements justify.  This leaves many labs to use
-inexpensive hardware correlators which produce a coarsely binned
-intensity signal. Furthermore, neither of these devices are flexible
-enough to accommodate recent variations of fluoroscence experiments,
-for instance, measurements involving multiple excitation
-sources[@lee2005; @seidel2008].
-
-We developed [@gamari2012] a photon timestamping instrument based around
-a readily available FPGA
+We developed [@gamari2012] a photon timestamping instrument based
+around a readily available FPGA
 [development board](http://www.knjn.com/FPGA-FX2.html). The instrument
 is easy to build with complete
-[build instructions](http://goldnerlab.physics.umass.edu/wiki/FpgaTimeTagger?action=AttachFile&do=view&target=construction.pdf). Along with timestamping functionality,
-the instrument includes an event sequencer which can be used for FRET
-variants requiring excitation laser switching [@Kapanidis2005]. The
-[sources](http://github.com/bgamari/timetag-fpga) include comprehensive
+[build instructions](http://goldnerlab.physics.umass.edu/wiki/FpgaTimeTagger?action=AttachFile&do=view&target=construction.pdf). Along
+with timestamping functionality, the instrument includes an event
+sequencer which can be used for FRET variants requiring excitation
+laser switching [@Kapanidis2005]. The
+[sources](http://github.com/bgamari/timetag-fpga) include
+comprehensive
 [documentation](http://github.com/bgamari/timetag-fpga/tree/master/docs)
 to allow for easy adaptation for new experimental settings.
 
 ### Software
 The instrument is complemented with a set of software
-[tools](http://github.com/bgamari/timetag-tools). In addition to
-low-level utilities for manipulating data collected by the instrument,
-the package provides a user-friendly graphical interface for setting up and monitoring an experiment. The `timetag_ui` interface provides
-control over the basic functionality of the hardware, as well several
-monitors showing facets of the incoming data. These include real-time
-monitors of an approximate FRET efficiency histogram, the correlation
-function, as well as the photon counting histogram, and bin counts.
+[tools](http://github.com/bgamari/timetag-tools) for low-level
+manipulation of collected data along with a user-friendly graphical
+interface for setting up and monitoring an experiment. These include
+real-time monitors of useful experimental quantities including an
+approximate FRET efficiency histogram, the correlation function,
+the photon counting histogram, and bin counts. This is in sharp
+contrast to existing commericial software which provides little if any
+support to the experimentalist during data collection.
 
 ![The `timetag_ui` interface during data acquisition](timetag-ui.png)
     
@@ -186,27 +137,3 @@ Along with the hardware and various software tools described above, we
 provide `bayes-stack`, a general-purpose framework for
 high-performance approximate inference on probabilistic models. This
 framework
-
-# Notes
-
- * PT2 support
- * vbFRET export/implementation
- * emFRET export
- * burst detection?
- * particle tracking?
- * verify repositories have properly licensed
- * new hardware
- * deblinking/denoising?
-
-
-[timetag-tutorial]: http://goldnerlab.physics.umass.edu/wiki/FpgaTimeTagger?action=AttachFile&do=view&target=construction.pdf
-[photon-tools docs]: https://github.com/bgamari/photon-tools/blob/master/readme.mkd
-
-A typical fluorescence spectroscopy experiment will collect tens of
-millions of photons, each contributing a small parcel of information
-about the system. While naive analysis methods have varried the field
-with some success thusfar, the need to prove systems with more
-intricate and faster dynamics presents the need for more sophisticated
-analytic tools. Analyzing fluorescence data in an information-optimal
-manner requires sophisticated statistical modelling along with
-physical insight.
